--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -235,16 +235,14 @@
                             {% set cardSupplied = pwstats['card_last_4'] ? 't' : 'f' %}
 
                             <div class="cus_acnt-col-12 cus_acnt-col-lg-4">
+                                {% set planPeriod = pwstats.period %}
+                                {% set planPeriodCount = "" %}
+
+                                {% if pwstats.period_count > 1 %}
+                                    {% set planPeriodCount = pwstats.period_count ~ " " %}
+                                    {% set planPeriod = pwstats.period ~ 's' %}
+                                {% endif %}
                                 {% if pwstats['type'] == 'time' %}
-
-                                    {% set planPeriod = pwstats.period %}
-                                    {% set planPeriodCount = "" %}
-
-                                    {% if pwstats.period_count > 1 %}
-                                        {% set planPeriodCount = pwstats.period_count ~ " " %}
-                                        {% set planPeriod = pwstats.period ~ 's' %}
-                                    {% endif %}
-
                                     <div class="cus_acnt__paymentBox">
                                         {% if pwstats['status'] != 'free' %}
                                             <div class="cus_acnt__paymentBox-box1">
@@ -292,7 +290,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                 {% else %}
                                     <div class="cus_acnt__paymentBox">
                                         <div class="cus_acnt__paymentBox-box2">
@@ -332,6 +329,119 @@
             </div>
         </div>
     </div>
+
+
+    {% if pwstats.userManager == true %}
+        <div class="cus_acnt__user-container">
+            <div class="cus_acnt-container-fluid">
+                <div class="cus_acnt-row">
+                    <div class="col-12 p-0">
+                        <div class="cus_acnt-container">
+                            <div class="cus_acnt-row">
+                                <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
+                                    <div class="cus_acnt__user-head">
+                                        <div class="cus_acnt__user-head--label">Choose a plan</div>
+                                        <div class="cus_acnt__user-head--sub-text">You will be asked to confirm before purchasing. </div>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cus_acnt-container d-none">
+                            <div class="cus_acnt-row">
+                                <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
+                                    <div class="cus_acnt__user-head">
+                                        <div class="cus_acnt__user-head--label">My users</div>
+                                        <div class="cus_acnt__user-head--sub-text">You can add, search and remove users below.</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cus_acnt__user__allotment-container cus_acnt__user__allotment-container-xs d-none">
+                            <div class="cus_acnt-container">
+                                <div class="cus_acnt-row">
+                                    <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
+                                        <div class="cus_acnt__user__addition">
+                                            <aside class="cus_acnt__user__addition-btn">
+                                                <a href="javascript:;" class="cus_acnt__btn cus_acnt__btn__bordered">Add user</a>
+                                            </aside>
+                                            <aside class="cus_acnt__user__allot-wrap">
+                                                <span class="cus_acnt__user__allot-wrap--image">
+                                                    <img src="{{networkData.templatePath}}/static/icons/user_icon.png"" alt="user" class="img-fluid" />
+                                                </span>
+                                                <span class="cus_acnt__user__allot-wrap--text">Allocated users:</span>
+                                                <span class="cus_acnt__user__allot-wrap--text strong">{{managedUserCount}} of {{totalPlanUserCount}}</span>
+                                            </aside>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cus_acnt-container">
+                            <div class="cus_acnt-row">
+                                <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
+                                    <div class="cus_acnt__user-grid cus_acnt__user-grid-xs">
+                                        <div class="cus_acnt__user-grid__search">
+                                            <form>
+                                                <div class="cus_acnt__user-grid__search--field">
+                                                    <span>
+                                                        <img src="{{networkData.templatePath}}/static/icons/icons-navigation-search.svg" />
+                                                    </span>
+                                                    <input id="managed-user-search-field" name="s" type="text" placeholder="Find a user" class="cus_acnt__form__input" />
+                                                </div>
+                                                <div class="cus_acnt__user-grid__search--btn">
+                                                    <button type="submit" class="cus_acnt__btn cus_acnt__btn__solid">Search</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="cus_acnt__user-grid__show-user">
+                                            Showing 0 users
+                                        </div>
+                                        <ul class="cus_acnt__user-grid__list">
+                                            <li class="no-data">No users found</li>
+                                            <li class="user-list--items">
+                                                <aside>
+                                                    <div class="user-list--items-name">Tom Jones</div>
+                                                    <div class="user-list--items-email">cheal@pagemasters.com.au</div>
+                                                </aside>
+                                                <aside>
+                                                    <a href="javascript:;" class="user-list--items-remove">
+                                                        <span class="icon fa fa-trash"></span>
+                                                        <span>Remove</span>
+                                                    </a>
+                                                </aside>
+                                            </li>
+                                            <li class="user-list--items">
+                                                <aside>
+                                                    <div class="user-list--items-name">Tom Jones</div>
+                                                    <div class="user-list--items-email">cheal@pagemasters.com.au</div>
+                                                </aside>
+                                                <aside>
+                                                    <a href="javascript:;" class="user-list--items-remove">
+                                                        <span class="icon fa fa-trash"></span>
+                                                        <span>Remove</span>
+                                                    </a>
+                                                </aside>
+                                            </li>
+                                            {% for user in managedUsers %}
+                                                <li id="{{user.id}}" class="c-managed-user">
+                                                    <p class="c-managed-user__email j-email">{{user.email}}</p>
+                                                    <a class="c-managed-user__close j-delete "></a>
+                                                    <a class="c-managed-user__edit j-edit"></a>
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
     
 
 </main>
