--- a/static/sass/components/_component.signin-modal.scss
+++ b/static/sass/components/_component.signin-modal.scss
@@ -9,9 +9,10 @@
 
 .signin-modal__window {
     margin: auto auto;
-    width: 468px;
+    max-width: 633px;
+    width: 100%;
     background: white;
-    padding: 0 50px 60px 50px;
+    padding: 0 70px 60px 70px;
     text-align: center;
     @media #{$media-ipadSmall} {
         width: auto;
@@ -39,7 +40,7 @@
         display: block;
         position: absolute;
         top: 8px;
-        right: 0;
+        right: -45px;
         height: 30px;
         width: 30px;
         background: url("../icons/cross.svg");
@@ -52,12 +53,13 @@
         text-align: center;
         font-weight: $weightBold;
         padding-top: 25px;
+        color: $black;
     }
     &__description {
-        @include font-size(14);
-        line-height: 1.14;
+        @include font-size(16);
+        line-height: 1.5;
         color: $grey5;
-        margin-top: 15px;
+        margin-top: 25px;
     }
 
     .login-form__forgot {
